fixed spacing added media queries

--- a/style.css
+++ b/style.css
@@ -4,20 +4,40 @@
 }
 
 .bds_logo {
-    min-width: 40%;
-    height: 60%;
-
+    max-width: 40%;
+    max-height: 40%;
+    position: relative;
 
 }
 
 .bg_section1 {
     background-image: url('images/clouds.jpg');
-    height: 300px;
+    background-position: middle;
 
 
 }
 
 .icon {
-    height: 50%;
+    -webkit-filter: grayscale(100%);
+}
 
+@media screen and (max-width:520px) {
+
+
+    .icon {
+        max-width: 40px !important;
+        min-width: 40px !important;
+        transition: .4s ease;
+    }
+}
+
+
+@media screen and (min-width:520px) {
+
+
+    .icon {
+        max-width: 50% !important;
+        min-width: 50% !important;
+        transition: .4s ease;
+    }
 }
